# rgrit

./: .gitmodules  Cargo.toml  README.md
examples/: proc.rs  simple.rs
grit-proc/: Cargo.toml
grit-proc/src/: lib.rs
grit-rs/: Cargo.toml
grit-rs/src/: lib.rs
grit-sys/: Cargo.toml  build.rs  wrapper.hpp
rgrit-core/: Cargo.toml  README.md
rgrit-core/src/: lib.rs
rgrit-proc/: Cargo.toml  README.md
rgrit-proc/src/: lib.rs
rgrit-rs/: Cargo.toml  README.md
rgrit-rs/src/: lib.rs
rgrit-sys/: Cargo.toml  README.md  build.rs  grit.patch
src/: lib.rs
