[package]
name = "rgrit"
version = "0.1.0"
edition = "2021"

[dependencies]
rgrit-proc = { path = "rgrit-proc", optional = true }
rgrit-rs = { path = "rgrit-rs", optional = true }
rgrit-core = { path = "rgrit-core" }

[workspace]
members = ["rgrit-core", "rgrit-proc", "rgrit-rs", "rgrit-sys"]

[workspace.dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }

[features]
default = ["std"]
std = ["dep:rgrit-proc", "dep:rgrit-rs"]
