[package]
name = "rgrit"
version = "0.1.0"
edition = "2021"
description = "A Rust interface to grit - the GBA Image Transmogrifier with batteries included!"
homepage = "https://github.com/not-jan/rgrit"
repository = "https://github.com/not-jan/rgrit"
license = "MIT"
keywords = ["nds", "grit", "bitmap", "homebrew", "nintendo"]
categories = ["game-development", "graphics", "multimedia::images"]
documentation = "https://docs.rs/rgrit"

[dependencies]
rgrit-proc = { path = "rgrit-proc", optional = true }
rgrit-rs = { path = "rgrit-rs", optional = true }
rgrit-core = { path = "rgrit-core", version = "0.1.0" }

[workspace]
members = ["rgrit-core", "rgrit-proc", "rgrit-rs", "rgrit-sys"]

[workspace.dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }

[features]
default = ["std"]
std = ["dep:rgrit-proc", "dep:rgrit-rs"]
