[package]
name = "rgrit-core"
version = "0.1.0"
edition = "2021"
description = "Core types for the rgrit crate"
homepage = "https://github.com/not-jan/rgrit/tree/master/rgrit-core"
repository = "https://github.com/not-jan/rgrit"
license = "MIT"
keywords = ["gba", "nds", "grit", "bitmap", "graphics", "homebrew", "nintendo"]
categories = ["game-development", "graphics", "multimedia::images"]

[dependencies]
