[package]
name = "rgrit-core"
version = "0.1.1"
edition = "2021"
description = "Core types for the rgrit crate"
homepage = "https://github.com/not-jan/rgrit/tree/master/rgrit-core"
repository = "https://github.com/not-jan/rgrit"
license = "MIT"
keywords = ["nds", "grit", "bitmap", "homebrew", "nintendo"]
categories = ["game-development", "graphics", "multimedia::images"]
documentation = "https://docs.rs/rgrit-core"

[dependencies]
